# logit-graph

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  environment.yml  logistitc_graph.ipynb  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup_dependencies.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
.ipynb_checkpoints/: logistitc_graph-checkpoint.ipynb
data/: spec_data_n=297_p=0_c=0.001_beta=1_threshold=0.5_sigma=1.0_n_iteration=5_warmup=2.pickle
data/input/: graph_data_n=100_p=0_c=0.001_beta=1_threshold=0.5_sigma=1.0_n_iteration=50_warm_up=2.pickle  spec_data_n=100_p=0_c=0.001_beta=1_threshold=0.5_sigma=1.0_n_iteration=50_warm_up=2.pickle
data/output/: graph_n=100_p=0_c=0.001_beta=1_threshold=0.5_sigma=1.0_n_iteration=100_warm_up=10.html  graph_n=100_p=0_c=0.001_beta=1_threshold=0.5_sigma=1.0_n_iteration=100_warm_up=50.html  test.html
docs/: API.md  connectomes.md  good_connectomes.md  index.md  reference.md  requirements.txt
examples/: pypi_estimate_d_sigma.ipynb  pypi_fit_real_network.ipynb
images/correction_paper/: aic_d_confusion_n_sweep_8eca1d25f8e55f7a_results.json  aic_d_confusion_n_sweep_a9f87a00a58e8ae9_results.json  aic_d_confusion_n_sweep_results.json  aic_d_incremental_results.json  aic_d_insights.txt  convergence_sigma_insights.txt
notebooks/: 1-0-create-graph.ipynb  1-create-graph.ipynb  10-0-confidence-kde.ipynb  10-1-d-study.ipynb  11-0-pca-features-rg.ipynb  12-0-anova-roc.ipynb  13-0-new-convergence.ipynb  13-pca-viz.ipynb  14-1-newdf-fitting.ipynb  14-2-simulation-analysis.ipynb  14-test-new-ds.ipynb  16-0-multiple-species-test.ipynb  16-3-visualization.ipynb  17-0-facebook-datasets copy.ipynb  17-0-facebook-datasets.ipynb  17-1-facebook-analysis.ipynb  18-0-twitter-datasets.ipynb  18-1-twitter-analysis.ipynb  2-0-exploration_graph.ipynb  2-exploration_graph.ipynb  2-explore-graph.ipynb  3-0-estimatino-parameters.ipynb  3-1-d-parameter.ipynb  3-1-estimation-parameters-analysis.ipynb  3-2-logit-debug.ipynb  3-3-estimation-param-different-d.ipynb  3-4-sigma_est_d_variables.ipynb  3-estimatino-parameters.ipynb  4-1-estimate-params-celegans.ipynb  4-explore-real-net.ipynb  5-0-test-real-nets.ipynb  5-test-real-nets.ipynb  6-0-test-model-selection.ipynb  7-0-testing_r_modules.ipynb  7-1-test-model-selection.ipynb  8-0-multiple-real-nets.ipynb  8-1-anova.ipynb  8-4-multiple-real-nets-debug.ipynb  9-0-anova-sigma.ipynb  estimation_results_connectomes.csv  (+6 more)
notebooks/anova/: 12-0-anova-roc.ipynb  13-anova-twitch.ipynb  14-anova-twitch-pairwise-optimal-d.ipynb  15-type_one_error.ipynb  8-1-anova.ipynb  9-0-anova-sigma.ipynb
notebooks/base/: 0-0-base.ipynb  10-1-d-study.ipynb  17-0-general-graph.ipynb  18-sigma-param-estimation-plot.ipynb  19-model-selection-tests.ipynb  22-3-convergence-diagnostics.ipynb  3-0-estimatino-parameters.ipynb  3-1-estimation-parameters-analysis.ipynb  3-3-estimation-param-different-d.ipynb  3-5-model-selection-aic-bic-gic.ipynb  4-0-explore-real-net.ipynb  5-0-test-real-nets.ipynb  7-0-testing_r_modules.ipynb
notebooks/citation/: 0-citation.ipynb  1-citation-kpm-sensitivity.ipynb
notebooks/connectomes_datasets/: 15-0-testing-again-est.ipynb  16-1-analysis.ipynb  17-0-conenctomes-datasets.ipynb  17-1-connectomes-analysis.ipynb  18-0-connectomes-datasets-simple.ipynb
notebooks/dim_red/: 11-0-pca-features-rg.ipynb  11-1-dim_red_social_nets.ipynb
notebooks/human_connectomes/: 18-0-human-datasets copy 2.ipynb  18-0-human-datasets copy.ipynb
notebooks/humman_connectomes/: 14-0-test-new-ds.ipynb  14-2-simulation-analysis.ipynb  (+2 more)
scripts/: benchmark_gibbs.py  run_roc_quick_n100.py  run_roc_quick_n1000_d01.py
src/: degrees_counts.py  estimator.py  gic.py  graph.py  graph_old.py  logistitc_graph.ipynb  logit_estimator.py  model_selection.py  param_estimator.py  simulation.py  utils.py
tests/: conftest.py  test_bugfixes.py  test_degrees_counts.py  test_degrees_counts_deeper.py  test_gibbs_equivalence.py  test_gic.py  test_gic_core.py  test_gic_kpm.py  test_graph_helpers.py  test_graph_model.py  test_graph_model_convergence.py  test_graph_model_deeper.py  test_lg_features.py  test_lg_features_core.py  test_lg_features_fast_core.py  test_logit_estimator.py  test_logit_estimator_api.py  test_logit_estimator_edge.py  test_model_selection_core.py  test_model_selection_ensemble.py  test_offset_logit.py  test_offset_logit_core.py  test_offset_logit_edge.py  test_param_and_model_selection_smoke.py  test_param_estimator.py  test_robust_se.py  test_sbm_core.py  test_simulation_api.py  test_simulation_fitter.py  test_sweep_parallel.py  test_temporal.py  test_temporal_multi.py  test_utils.py
(+181 files in other folders)
