[project]
name = "logit-graph"
version = "0.1.0"
description = "Probabilistic logit-based graph model and utilities"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Maruan Ottoni" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "asttokens==2.0.5",
    "certifi==2024.2.2",
    "cffi==1.15.1",
    "comm==0.1.4",
    "contourpy==1.1.1",
    "cycler==0.11.0",
    "debugpy==1.8.0",
    "decorator==5.1.1",
    "exceptiongroup==1.1.3",
    "executing==0.8.3",
    "filelock==3.13.3",
    "fonttools==4.49.0",
    "fsspec==2024.3.1",
    "igraph==0.11.4",
    "imageio==2.34.0",
    "imbalanced-learn==0.12.2",
    "imblearn==0.0",
    "importlib_metadata==7.0.2",
    "ipykernel==6.29.3",
    "ipython==8.22.2",
    "jedi==0.19.1",
    "Jinja2==3.1.3",
    "joblib==1.3.2",
    "jsonpickle==3.0.3",
    "jupyter_client==8.6.1",
    "jupyter_core==5.7.2",
    "kiwisolver==1.4.5",
    "lxml==5.2.2",
    "MarkupSafe==2.1.5",
    "matplotlib==3.8.3",
    "matplotlib-inline==0.1.6",
    "mpmath==1.3.0",
    "munkres==1.1.4",
    "nest_asyncio==1.6.0",
    "networkx==3.2.1",
    "numpy==1.26.4",
    "packaging==24.0",
    "pandas==2.2.1",
    "parso==0.8.3",
    "patsy==0.5.6",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==10.2.0",
    "platformdirs==4.2.0",
    "prompt-toolkit==3.0.42",
    "psutil==5.9.8",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pycairo==1.26.0",
    "pycparser==2.21",
    "Pygments==2.17.2",
    "PyGObject==3.48.1",
    "pyintergraph==1.3.3",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0",
    "pytz==2024.1",
    "pyvis==0.3.2",
    "pyzmq==25.1.2",
    "scikit-learn==1.4.1.post1",
    "scipy==1.12.0",
    "seaborn==0.13.2",
    "setuptools==69.2.0",
    "six==1.16.0",
    "stack-data==0.2.0",
    "statsmodels==0.14.1",
    "sympy==1.12",
    "texttable==1.7.0",
    "threadpoolctl==3.4.0",
    "torch==2.2.2",
    "tornado==6.4",
    "traitlets==5.14.2",
    "typing_extensions==4.10.0",
    "tzdata==2024.1",
    "wcwidth==0.2.6",
    "wheel==0.43.0",
    "zipp==3.17.0",
    "zstandard==0.22.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/maruanottoni/logit-graph"
Repository = "https://github.com/maruanottoni/logit-graph"
Issues = "https://github.com/maruanottoni/logit-graph/issues"