[project]
name = "logit-graph"
version = "0.1.1"
description = "Probabilistic logit-based graph model and utilities"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Maruan Ottoni" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "networkx>=3.0",
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "ipython>=8",
    "seaborn",
    "pyvis",
    "imageio",
    "marimo",
    "ipywidgets>=8",
    "ipykernel",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.9.4",
    "imageio>=2.37.2",
    "pyvis>=0.3.2",
    "seaborn>=0.13.2",
    "powerlaw>=1.5.2",
    "tqdm>=4.66",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyvis>=0.3.2"
]
notebook = [
    "ipykernel>=6",
    "ipython>=8",
    "jupyter_client>=8",
    "jupyter_core>=5"
]
progress = [
    "tqdm>=4.66"
]
torch = [
    "torch>=2.0"
]

[project.urls]
Homepage = "https://github.com/maruanottoni/logit-graph"
Repository = "https://github.com/maruanottoni/logit-graph"
Issues = "https://github.com/maruanottoni/logit-graph/issues"
